# esm-ecn

./: .gitignore  README.md  pyproject.toml
notebooks/: ecn_dataset.ipynb  knn_baseline.ipynb  sae_pred.ipynb
scripts/: preprocess_data.py  train.py
src/esm_ecn/: constants.py  data.py  model.py  train.py
