[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "esm_ecn"
version = "0.0.0"
authors = [
  { name="Ishan Gaur", email="ishang@berkeley.edu" },
]
description = "ECN Prediction using ESMC"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ishan-gaur/esm-ecn"
